using render server name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 
                 // Fetching from your server port 8080
                 const PORT=8080;
-                const Server = `http://localhost:${PORT}`;
+                // const Server = `http://localhost:${PORT}`;
+                const Server = `https://firstexamplerenderdeploy-delme.onrender.com`;
                 const response = await fetch(Server);
                 
                 if (!response.ok) {
